<resources>
    <string name="app_name">MiniProject</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zip_hint">Enter Location</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login_btn_text">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="signup_btn_text">Register</string>
    <string name="already_got_account">Already got account? Login</string>
    <string name="pikachu_location">Pikachu Location</string>
    <string name="add_location">Add location</string>
    <string name="logout">Logout</string>
</resources>
