<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="quytu.miniproject.Dashboard">

    <Button
        android:id="@+id/btn_show_maps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pikachu_location"/>

    <Button
        android:id="@+id/btn_add_location"
        android:layout_below="@id/btn_show_maps"
        android:text="@string/add_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_log_out"
        android:layout_below="@id/btn_add_location"
        android:layout_width="match_parent"
        android:text="@string/logout"
        android:layout_height="wrap_content" />

</RelativeLayout>
